# prima-zaikun-pybinding

./: CMakeLists.txt  meson.build  pyproject.toml
.devcontainer/: .gitignore  Dockerfile.aflang  Dockerfile.gfortran  Dockerfile.ifort  Dockerfile.nvfortran  README.md  devcontainer.aflang.json  devcontainer.gfortran.json  devcontainer.ifort.json  devcontainer.nvfortran.json
.github/actions/spelling/: allow.txt
.github/workflows/: build_python.yml
c/: prima.c
c/include/prima/: prima.h
fortran/: meson.build
fortran/examples/: meson.build
python/: README.md  _prima.cpp
python/examples/: rosenbrock.py
python/prima/: __init__.py  _bounds.py  _common.py  _linear_constraints.py  _nonlinear_constraints.py
python/src/prima/cobyla/: cobyla.py  cobylb.py  geometry.py  initialize.py  trustregion.py  update.py
python/src/prima/common/: checkbreak.py  consts.py  evaluate.py  linalg.py  output.py  redrho.py  selectx.py
python/src/prima/examples/cobyla/: cobyla_example.py
python/tests/: README.md  test_basic_functionality.py  test_bounds.py  test_callback.py  test_cobyla.py  test_combining_constraints.py  test_compatibility_pdfo.py  test_compatibility_scipy.py  test_compatible_interface.py  test_data_types.py  test_fun_with_args.py  test_lincoa.py  test_linear_constraints.py  test_options.py  test_process_linear_constraints.py  test_process_nonlinear_constraints.py  test_x0_list_array_scalar.py
