
prima_f_sources = [
  'common/linalg.f90',
  'common/pintrf.f90',
  'common/string.f90',
  'common/evaluate.f90',
  'common/preproc.f90',
  'common/univar.f90',
  'common/powalg.f90',
  'common/history.f90',
  'common/xinbd.f90',
  'common/message.f90',
  'common/fprint.f90',
  'common/ratio.f90',
  'common/debug.F90',
  'common/consts.F90',
  'common/checkexit.f90',
  'common/inf.F90',
  'common/redrho.f90',
  'common/memory.F90',
  'common/selectx.f90',
  'common/huge.F90',
  'common/infnan.F90',
  'common/shiftbase.f90',
  'common/infos.f90',
  'cobyla/cobyla.f90',
  'cobyla/cobylb.f90',
  'cobyla/geometry.f90',
  'cobyla/initialize.f90',
  'cobyla/trustregion.f90',
  'cobyla/update.f90',
  'bobyqa/bobyqa.f90',
  'bobyqa/bobyqb.f90',
  'bobyqa/geometry.f90',
  'bobyqa/initialize.f90',
  'bobyqa/trustregion.f90',
  'bobyqa/rescue.f90',
  'bobyqa/update.f90',
  'lincoa/update.f90',
  'lincoa/initialize.f90',
  'lincoa/getact.f90',
  'lincoa/trustregion.f90',
  'lincoa/geometry.f90',
  'lincoa/lincob.f90',
  'lincoa/lincoa.f90',
  'newuoa/initialize.f90',
  'newuoa/trustregion.f90',
  'newuoa/geometry.f90',
  'newuoa/update.f90',
  'newuoa/newuob.f90',
  'newuoa/newuoa.f90',
  'uobyqa/initialize.f90',
  'uobyqa/update.f90',
  'uobyqa/geometry.f90',
  'uobyqa/trustregion.f90',
  'uobyqa/uobyqb.f90',
  'uobyqa/uobyqa.f90',
]

lib_prima_f = static_library('prima_f',
  prima_f_sources,
)

subdir('examples')